--- a/llama_7b_fine_tuning_Gathnex.ipynb
+++ b/llama_7b_fine_tuning_Gathnex.ipynb
@@ -5111,7 +5111,7 @@
       "source": [
         "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, HfArgumentParser, TrainingArguments, pipeline, logging, TextStreamer\n",
         "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training, get_peft_model\n",
-        "import os,torch, wandb, platform, gradio, warnings\n",
+        "import os,torch, , platform, gradio, warnings\n",
         "from datasets import load_dataset\n",
         "from trl import SFTTrainer\n",
         "from huggingface_hub import notebook_login"
@@ -5645,7 +5645,7 @@
       "cell_type": "code",
       "source": [
         "#monitering login\n",
-        "wandb.login(key=\"0ae87825f567ee7191efb1c20b3cd4ede2e7c061\")\n",
+        "wandb.login(key=\"\")\n",
         "run = wandb.init(project='10k-Fine tuning llama-2-7B', job_type=\"training\", anonymous=\"allow\")"
       ],
       "metadata": {
