--- a/llama_7b_fine_tuning_Gathnex.ipynb
+++ b/llama_7b_fine_tuning_Gathnex.ipynb
@@ -223,7 +223,7 @@
         "dataset_name = \"Ayush2312/Therapydataset_formatted\"\n",
         "\n",
         "# Hugging face repository link to save fine-tuned model(Create new repository in huggingface,copy and paste here)\n",
-        "new_model = \"Ayush2312/llama2-7B-3k-TherapyData\""
+        "new_model = \"Ayush2312/llama2-7B-1k-TherapyData\""
       ]
     },
     {
@@ -247,7 +247,7 @@
       ],
       "source": [
         "from datasets import load_dataset\n",
-        "dataset = load_dataset(\"Ayush2312/Therapydataset_formatted\",split=\"train[0:3000]\")"
+        "dataset = load_dataset(\"Ayush2312/Therapydataset_formatted\",split=\"train[0:1000]\")"
       ]
     },
     {
@@ -655,7 +655,7 @@
       "source": [
         "#monitering login\n",
         "import wandb\n",
-        "wandb.login(key=\"\")\n",
+        "wandb.login(key=\"0ae87825f567ee7191efb1c20b3cd4ede2e7c061\")\n",
         "run = wandb.init(project='3k-Fine tuning llama-2-7B', job_type=\"training\", anonymous=\"allow\")"
       ]
     },
